Fix spacing on audio settings

--- a/core/components/settings-screen/index.css
+++ b/core/components/settings-screen/index.css
@@ -14,4 +14,10 @@ settings-screen {
 	.horizontal {
 		justify-content: center;
 	}
+
+	[data-content="audio-settings"] {
+		& > h3 {
+			margin-bottom: 1rem;
+		}
+	}
 }
